micro_service/envoy_base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: backend-service:v1
        imagePullPolicy: Never
        name: backend
        ports:
        - containerPort: 10000
          protocol: TCP
        resources: {}
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  ports:
  - port: 10000
    protocol: TCP
  selector:
    app: backend
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: backend-headless-service
  namespace: default
spec:
  ports:
  - name: http
    port: 10000
    protocol: TCP
  selector:
    app: backend
  type: ClusterIP
